<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="nav_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/menu_navigation_configuration" />

        <item
            android:id="@+id/nav_conversion"
            android:icon="@drawable/icon_conversion"
            android:title="@string/title_activity_conversion" />

        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/icon_words_saved"
            android:title="@string/menu_navigation_saved_words" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/icon_share"
            android:title="@string/menu_navigation_share_app" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/icon_info"
            android:title="@string/menu_navigation_about" />

    </group>

</menu>