<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ao.dicionariodetermosinformaticos.romavicdosanjoskc.view.activity.ConfigurationAppActivity">

    <Button
        android:id="@+id/btnSaveConfiguration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerTypeFont"
        android:layout_margin="@dimen/configuration_margin"
        android:background="@drawable/background_style_blue"
        android:text="@string/edit_configuration"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/intro_regular"/>

    <Spinner
        android:id="@+id/spinnerTypeFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textFont"
        android:layout_margin="@dimen/configuration_margin" />

    <Spinner
        android:id="@+id/spinnerIncreaseText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textWeight"
        android:layout_margin="@dimen/configuration_margin" />

    <TextView
        android:id="@+id/textWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/appBar"
        android:layout_margin="@dimen/configuration_margin"
        android:text="@string/text_size"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/intro_regular"/>

    <TextView
        android:id="@+id/textFont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerIncreaseText"
        android:layout_margin="@dimen/configuration_margin"
        android:text="@string/text_font"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/intro_regular"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

</RelativeLayout>