<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ao.dicionariodetermosinformaticos.romavicdosanjoskc.view.activity.ConversionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/conversion_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/insert_number"
                android:textSize="@dimen/text_size"
                android:fontFamily="@font/intro_regular"
                tools:ignore="TextFields"
                android:autofillHints=""
                tools:targetApi="o" />

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinConversionSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/conversion_margin"
            android:layout_gravity="center"
            android:text="@string/calculate"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/intro_regular"
            android:background="@drawable/background_style_blue"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/conversion_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/decimal"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"/>

                <TextView
                    android:id="@+id/textDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/conversion_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/binary"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textBinary"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/conversion_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/octal"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textOctal"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/conversion_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/hexadecimal"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"/>

                <TextView
                    android:id="@+id/textHexadecimal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:textSize="@dimen/text_size"
                    android:fontFamily="@font/intro_regular"
                    android:textStyle="bold"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

    </LinearLayout>

</LinearLayout>